Lots of work on landing page

--- a/index.html
+++ b/index.html
@@ -12,12 +12,26 @@
     
 <script>document.body.className += ' fade-out';</script>
     <div class="header">
-        Some text
+        Adam Pohl
     </div>
     <div class="container">
         <div class="row">
             <div class="col-md-12 welcome">
                 Welcome
+                <div class="links">
+                    <div class="content">
+                        <img src="images/gitpic.png" alt="">
+                        <div class="overlay">
+                            <div class="text">Hello, world</div>
+                        </div> <!-- End overlay -->
+                    </div> <!-- End content div-->
+                    <div class="content">
+                        <img src="images/watch-side.jpg" alt="">
+                        <div class="overlay">
+                            <div clas="text">More text</div>
+                        </div> <!-- End second overlay-->
+                    </div> <!-- End second content div-->
+                </div> <!-- End links div-->
             </div> <!-- End col -->
         </div> <!-- End row -->
     </div> <!-- End main Bootstrap container-->
