Finished index links

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <script>document.body.className += ' fade-out';</script>
     <div class="header">
         Adam Pohl
+        <div class="subtext">OOP, Frontend, and Embedded Development</div>
     </div>
     <div class="container">
         <div class="row">
@@ -19,16 +20,23 @@
                 Welcome
                 <div class="links">
                     <div class="content">
-                        <img src="images/gitpic.png" alt="">
-                        <div class="overlay">
-                            <div class="text">Hello, world</div>
-                        </div> <!-- End overlay -->
+                        <img src="images/project.png" alt="">
+                        <a href="#">
+                            <div class="overlay">
+                                <div class="textlead"><p>Projects</p></div>
+                                <div class="text">From OOP programming to embedded development. You can find writeups on many of my
+                                projects here</div>
+                            </div> <!-- End overlay -->
+                        </a> 
                     </div> <!-- End content div-->
                     <div class="content">
-                        <img src="images/watch-side.jpg" alt="">
-                        <div class="overlay">
-                            <div clas="text">More text</div>
-                        </div> <!-- End second overlay-->
+                        <img src="images/github.png" alt="">
+                        <a href="https://github.com/acp21">
+                            <div class="overlay">
+                                <div class="textlead">Github</div>
+                                <div class="text">Many of my projects are open source. You can find the source code on my github</div>
+                            </div> <!-- End second overlay-->
+                        </a>
                     </div> <!-- End second content div-->
                 </div> <!-- End links div-->
             </div> <!-- End col -->
