--- a/index.html
+++ b/index.html
@@ -41,7 +41,21 @@
                 </div> <!-- End links div-->
             </div> <!-- End col -->
         </div> <!-- End row -->
+        
     </div> <!-- End main Bootstrap container-->
+
+    <div class="container back">hotshit
+        <div class="row">
+            <div class="col-md-12">Mega gay fag stuff</div>
+        </div>
+    </div>
+    <!-- <div class="secondary">
+        <section class="row container">
+             <div class="row">
+                  <p class="col-md-4 col-sm-6" col-sm-push-7><img src="images/temp_riley.gif"></p>
+                   <h1 class="col-md-8 col-sm-6" col-sm-pull-7>Hi. I'm Riley: a problem solving UX designer (and front-end developer) who is intrigued by change and loves a good challenge. </h1>
+             </div>
+        </section> -->
     <!-- Bootstrap scripts must go at end of body -->
     <!-- JS files: jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
