--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         
     </div> <!-- End main Bootstrap container-->
 
-    <div class="container back">hotshit
+    <div class="container back">container
         <div class="row">
-            <div class="col-md-12">Mega gay fag stuff</div>
+            <div class="col-md-12"></div>
         </div>
     </div>
     <!-- <div class="secondary">
